# BofferELOBackEnd

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_API.md  LICENSE  README.md  SUPABASE_SCHEMA.md  admin.py  api.py  claude.md  dbInteractions.py  helpers.py  initialize.py  main.py  matches.py  models.py  pyproject.toml  rate_limit.py  seed_data.py  test.env.example  users.py
docs/plans/: 2026-04-03-unconfirmed-user-restrictions-design.md
plans/: 2026-03-29-exclude-pending-accounts.md
plans/completed/: 2026-03-29-exclude-pending-accounts.md  2026-04-03-block-unconfirmed-users.md  2026-04-03-hide-unconfirmed-profiles.md  merge-game-types-into-rule-sets.md
tests/: conftest.py  test_account.py  test_helpers.py  test_public.py  test_rate_limit.py  test_unconfirmed.py  test_users.py
